Add form handling with validation and submission using web3forms; Minor tweaks; Fix typos in privacy.html; Setup automatic url rewrites; Link some buttons to social pages

--- a/src/styles.css
+++ b/src/styles.css
@@ -528,6 +528,10 @@ section {
     width: 100%;
 }
 
+.terminal-window * {
+    text-align: left;
+}
+
 .terminal-header {
     background-color: var(--primary-light);
     padding: var(--spacing-md);
