--- a/src/styles.css
+++ b/src/styles.css
@@ -968,19 +968,18 @@ section {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: column;
-    flex-direction: column;
-    gap: var(--spacing-lg);
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: var(--spacing-md);
 }
 
 .skill-item {
     background-color: var(--white);
-    padding: var(--spacing-lg);
+    padding: var(--spacing-sm) var(--spacing-md);
     border-radius: var(--radius-lg);
     -webkit-box-shadow: var(--shadow-sm);
     box-shadow: var(--shadow-sm);
+    width: min-content;
 }
 
 .skill-info {
@@ -993,7 +992,7 @@ section {
     -webkit-box-align: center;
     -ms-flex-align: center;
     align-items: center;
-    margin-bottom: var(--spacing-sm);
+
 }
 
 .skill-name {
